--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,10 @@
 {{> layout/header}}
 
 <body>
+
+    {{> layout/navbar}}
+
+
 <div class="container">
     <h1 class="pt-md-5 pb-md-5">Pokemon Manager</h1> <!--3-->
 
@@ -10,7 +14,7 @@
         <div class="row col-md-10">
 
             <blockquote class="blockquote"> <!--2-->
-                Hello there!
+                Hello there !
                 Welcome to the world of Pokémon!
                 My name is Oak! People call me the Pokémon Prof!
                 This world is inhabited by creatures called Pokémon!
